--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,6 +1,6 @@
 <h1>Home Page</h1>
 <section class="room-box">
   <div ui-view ng-repeat="room in home.rooms track by $index">
-    {{ room }}
+    {{ room.$value }}
   </div>
 </section>
