--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -11,6 +11,13 @@
     <div ng-repeat="message in room.currentMessages">
       <p><strong>{{ message.username }}</strong></p>
       <p>{{ message.content }}</p>
+      <p>{{ message.sentAt }}</p>
     </div>
+  </div>
+  <div class="messagebox">
+    <form ng-controller="MsgCtrl as messageCtrl">
+      Message: <input type="text" ng-model="inputTxt">
+      <button class="btn" type="button" ng-click="messageCtrl.send(inputTxt)">Submit</button>
+    </form>
   </div>
 </div>
